--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=basicauth
+spring.application.name=basicauth-service
 spring.config.import=optional:file:local.env[.properties]
 
 spring.datasource.driver-class-name=org.postgresql.Driver
